--- a/src/assets/css/Home.module.css
+++ b/src/assets/css/Home.module.css
@@ -44,11 +44,14 @@ font-family:  Inter,'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 padding: 14px 85px 14px 55px;
 color: #846FCC;
 font-weight: 500;
+-webkit-appearance: none;
 
 }
 
 .containerSearch input:focus{
    outline: 2px solid #846FCC;
+   border-radius: 30px;
+   -webkit-appearance: none;
 }
 .imgPersonaggioInput {
     position: absolute;
