--- a/src/assets/css/Filtro.module.css
+++ b/src/assets/css/Filtro.module.css
@@ -164,3 +164,12 @@ padding: 5px 10px;
 color: #fff;
 
  }   
+
+ .attivo {
+    border: 0px solid #fff;
+    border-radius: 3px;
+    background: #47338D!important;
+    padding: 3px 7px;
+    font-size: 15px;
+    color: #ffffff !important;
+ }
