--- a/src/assets/css/Preferiti.module.css
+++ b/src/assets/css/Preferiti.module.css
@@ -33,7 +33,7 @@
     padding: 5px 20px;
     color: #47338D ;
     font-size: 23px;
-    font-weight: 600;
+    font-weight: 600; 
     margin-bottom: 30px;
 }
 .containerTitle h2 {
@@ -49,11 +49,17 @@
 }
 .containerSchede {
     margin-top: 35px;
-   
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 10px;
     padding: 20px;
+    position: relative;
+}
+.containerAvvisoFiltro {
+   position: absolute;
+   top: 20px;
+   left: 50%;
+   transform: translateX(-50%);
 }
 
 .baseCard {
