--- a/src/assets/css/Filtro.module.css
+++ b/src/assets/css/Filtro.module.css
@@ -143,7 +143,9 @@ transition: all 0.3s;
     text-decoration: underline;
 }
 .rigaCinque {
-     
+     width: 100%;
+     display: flex;
+     margin-top: 5px;
 }
 
 .filtroOrder::before {
@@ -157,13 +159,24 @@ transition: all 0.3s;
     border: 0px solid #fff;
     width: 100%;
     font-size: 15px;
-    border-radius: 20px;
+    border-radius: 6px;
 background: #47338D;
 box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.10);
 padding: 5px 10px;
 color: #fff;
 
  }   
+ .removeFilterBtn {
+    border: 0px solid #fff;
+    width: 100%;
+    font-size: 15px;
+    border-radius: 6px;
+background: #fff;
+box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.10);
+padding: 5px 10px;
+color: #47338D;
+margin-right: 5px;
+ }
 
  .attivo {
     border: 0px solid #fff;
@@ -171,5 +184,5 @@ color: #fff;
     background: #47338D!important;
     padding: 3px 7px;
     font-size: 15px;
-    color: #ffffff !important;
+    color: #ffffff !important; 
  }
