--- a/src/assets/css/Cronologia.module.css
+++ b/src/assets/css/Cronologia.module.css
@@ -9,8 +9,9 @@
     font-size: 16px;
     font-weight: 500;
 }
+
 .bloccoBack {
-    
+     
     display: flex;
     justify-content: flex-start;
     align-items: center; 
@@ -27,7 +28,7 @@
     position: sticky;
     top: 0px;
     z-index:2;
-    display: flex; 
+    display: flex;
     justify-content: flex-start;
     align-items: center;
     padding: 5px 20px;
@@ -39,14 +40,6 @@
 .containerTitle h2 {
     text-transform: capitalize;
 }
-.containerFiltri {
-    width: 100%;
-    display: flex;
-    justify-content: center; 
-    align-items: flex-start;
-    padding: 0px 20px;
-    margin-top: 25px;
-}
 .containerSchede {
     margin-top: 35px;
     display: grid;
@@ -54,12 +47,44 @@
     gap: 10px;
     padding: 20px;
     position: relative;
+    
 }
-.containerAvvisoFiltro {
-   position: absolute;
-   top: 20px;
-   left: 50%;
-   transform: translateX(-50%);
+.containerFiltri {
+    
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.filtriCol1 {
+   
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.filtriCol1 p {
+    margin-right: 8px;color: #846FCC;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 600;
+}
+.filtriCol2 {
+    
+}
+.filtriCol2 p {
+    color: #846FCC;
+font-size: 15px;
+font-style: normal;
+font-weight: 600;
+}
+.filtriCol1 select{
+    border: 0px solid #fff;
+    border-radius: 3px;
+background: rgba(255, 255, 255, 0.60);
+box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.10);
+color: #47338D;
+font-size: 15px;
+padding: 4px 5px;
 }
 
 .baseCard {
@@ -91,7 +116,20 @@ align-items: center;
     align-items: center;
     position: relative;
 }
-
+.boxView {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: #fff;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.12));
+    cursor: pointer;
+}
 .rigaBassa {
     
     display: flex;
@@ -122,43 +160,4 @@ align-items: center;
     align-items: center;
     filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.12));
     cursor: pointer;
-}
-.boxView {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background-color: #fff;
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.12));
-    cursor: pointer;
-}
-
-.containerNoPref {
-    margin-top: 50px;
-    width: 100%;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.containerNoPref h3{
-    color: #47338D;
-    font-size: 28px;
-    text-align: center;
-    margin-top: 20px;
-}
-.containerScheda {
-   
-    width: 100%;
-    padding: 0px 20px;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    margin-bottom: 80px;
 }
