--- a/src/assets/css/Cronologia.module.css
+++ b/src/assets/css/Cronologia.module.css
@@ -88,6 +88,7 @@ padding: 4px 5px;
 }
 
 .baseCard {
+    position: relative;
     width: 100%;
     border-radius: 6px;
 background: rgba(243, 243, 243, 0.40);
@@ -160,4 +161,36 @@ align-items: center;
     align-items: center;
     filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.12));
     cursor: pointer;
+}
+.baseCopertura {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(243, 243, 243, 0.80);
+    width: 100%;
+    height: 100%;
+    border-radius: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.centroCopertura {
+    background: rgba(132, 111, 204, 0.90);
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+}
+.centroCopertura span {
+    font-size: 14px;
+}
+.icona {
+    width: 25px;
+    height: 25px;
+    fill: #fff;
 }
