aggiunto autocompletamento search

--- a/src/assets/css/Home.module.css
+++ b/src/assets/css/Home.module.css
@@ -31,8 +31,8 @@
 .contenitoreInput {
     width: 100%; 
     max-width: 400px;
-    
     position: relative;
+   
 }
 .contenitoreTesto {
     width: 100%; 
@@ -48,6 +48,15 @@
 font-style: normal;
 font-weight: 600;
 }
+.contenitoreInput form {
+    z-index: 2;
+    position: relative;
+}
+
+.containerSearch {
+    z-index: 3;
+}
+
 .containerSearch input {
     width: 100%;
     border-radius: 30px;
@@ -61,6 +70,7 @@ padding: 14px 85px 14px 55px;
 color: #846FCC;
 font-weight: 500;
 -webkit-appearance: none;
+
 
 }
 
@@ -172,4 +182,31 @@ font-weight: 500;
     animation-duration: 1.9s;
     animation-iteration-count: infinite;
     animation-timing-function:linear;
+}
+
+.containerConsigliati {
+    background: rgba(243, 243, 243);
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.15);
+backdrop-filter: blur(5px);
+    position: absolute;
+    top: 0;
+    left:0;
+    width: 100%;
+    padding: 55px 20px 10px 23px ;
+    border-radius: 30px;
+  z-index: 0;
+}
+.containerConsigliati > div {
+    padding: 5.5px 0px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.containerConsigliati > div p {
+    font-size: 14px;
+    color: #47338D;
+    margin-left: 15px;
+}
+.consigliatiIco {
+    color:#846FCC
 }
