--- a/src/assets/css/Preferiti.module.css
+++ b/src/assets/css/Preferiti.module.css
@@ -10,7 +10,7 @@
     font-weight: 500;
 }
 .bloccoBack {
-    
+    cursor: pointer;
     display: flex;
     justify-content: flex-start;
     align-items: center; 
